[gd_scene load_steps=11 format=3 uid="uid://blm8vcsq5vmli"]

[ext_resource type="Texture2D" uid="uid://b2ehqh3ps5njf" path="res://icon.svg" id="1_jf1j2"]
[ext_resource type="Script" uid="uid://crku18klnclgx" path="res://Scenes/Menu/menu.gd" id="1_w32jx"]
[ext_resource type="FontFile" uid="uid://d04jddmklsan1" path="res://Fonts/Bonello-Regular.otf" id="2_crea4"]
[ext_resource type="FontFile" uid="uid://cr7hcb1m6hvrn" path="res://Fonts/PositionsByArixbored-Regular .otf" id="2_e56cd"]
[ext_resource type="StyleBox" uid="uid://cgnys514rgdnf" path="res://Scenes/Menu/Buttons_Styles_Normal.tres" id="2_u03px"]
[ext_resource type="AudioStream" uid="uid://dfaxfeuphuf4x" path="res://sounds/Sfx/Buttons/Menu/Buttons_1Part_Menu.wav" id="6_h7084"]
[ext_resource type="AudioStream" uid="uid://bldn1rtqbxfyi" path="res://sounds/Sfx/Buttons/Menu/Buttons_2Part_Menu.wav.wav" id="7_uw0ty"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_crea4"]
bg_color = Color(0.13743177, 0.13743198, 0.13743186, 0.88500005)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0, 0, 0, 0.35686275)
shadow_size = 1
shadow_offset = Vector2(1.3, 1.3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u03px"]
bg_color = Color(0.154679, 0.15467909, 0.15467891, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0, 0, 0, 0.35686275)
shadow_size = 1
shadow_offset = Vector2(1.3, 1.3)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jf1j2"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w32jx")

[node name="Background" type="TextureRect" parent="."]
modulate = Color(0.4425734, 0.44257337, 0.44257334, 1)
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_jf1j2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -130.875
offset_top = -67.0
offset_right = 130.875
offset_bottom = 116.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5

[node name="Play_Button" type="Button" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.4848652, 0.31057084, 0.22777435, 1)
theme_override_colors/font_focus_color = Color(0.4492039, 0.28493494, 0.20598418, 0.731)
theme_override_colors/font_pressed_color = Color(0.36038005, 0.22272217, 0.15836817, 1)
theme_override_colors/font_hover_color = Color(0.53906786, 0.3475012, 0.25766784, 0.61300004)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0.4862745, 0.30980393, 0.22745098, 1)
theme_override_colors/font_outline_color = Color(0.16931278, 0.09415484, 0.058974892, 1)
theme_override_constants/outline_size = 7
theme_override_fonts/font = ExtResource("2_crea4")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("2_u03px")
theme_override_styles/pressed = SubResource("StyleBoxFlat_crea4")
theme_override_styles/hover = SubResource("StyleBoxFlat_u03px")
theme_override_styles/focus = SubResource("StyleBoxEmpty_jf1j2")
action_mode = 0
text = "Play"

[node name="Settings_Button" type="Button" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.4848652, 0.31057084, 0.22777435, 1)
theme_override_colors/font_focus_color = Color(0.4492039, 0.28493494, 0.20598418, 0.731)
theme_override_colors/font_pressed_color = Color(0.36038005, 0.22272217, 0.15836817, 1)
theme_override_colors/font_hover_color = Color(0.53906786, 0.3475012, 0.25766784, 0.61300004)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0.4862745, 0.30980393, 0.22745098, 1)
theme_override_colors/font_outline_color = Color(0.16931278, 0.09415484, 0.058974892, 1)
theme_override_constants/outline_size = 7
theme_override_fonts/font = ExtResource("2_crea4")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("2_u03px")
theme_override_styles/pressed = SubResource("StyleBoxFlat_crea4")
theme_override_styles/hover = SubResource("StyleBoxFlat_u03px")
theme_override_styles/focus = SubResource("StyleBoxEmpty_jf1j2")
text = "Settings"

[node name="Exit_Button" type="Button" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.4848652, 0.31057084, 0.22777435, 1)
theme_override_colors/font_focus_color = Color(0.4492039, 0.28493494, 0.20598418, 0.731)
theme_override_colors/font_pressed_color = Color(0.36038005, 0.22272217, 0.15836817, 1)
theme_override_colors/font_hover_color = Color(0.53906786, 0.3475012, 0.25766784, 0.61300004)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0.4862745, 0.30980393, 0.22745098, 1)
theme_override_colors/font_outline_color = Color(0.16931278, 0.09415484, 0.058974892, 1)
theme_override_constants/outline_size = 7
theme_override_fonts/font = ExtResource("2_crea4")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("2_u03px")
theme_override_styles/pressed = SubResource("StyleBoxFlat_crea4")
theme_override_styles/hover = SubResource("StyleBoxFlat_u03px")
theme_override_styles/focus = SubResource("StyleBoxEmpty_jf1j2")
text = "Exit"

[node name="Game_Title" type="Label" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -292.5
offset_top = 28.0
offset_right = 292.5
offset_bottom = 91.511
grow_horizontal = 2
theme_override_colors/font_color = Color(0.70637727, 0.51639724, 0.3431899, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("2_e56cd")
theme_override_font_sizes/font_size = 80
text = "Cats ( Gladiators"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons_1Part_SFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_h7084")

[node name="Buttons_2Part_SFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_uw0ty")

[connection signal="pressed" from="VBoxContainer/Play_Button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit_Button" to="." method="_on_exit_button_pressed"]
